--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -33,7 +33,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="9" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel56" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane12" min="-2" pref="104" max="-2" attributes="0"/>
@@ -781,7 +781,7 @@
                                           <Component id="jLabel74" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="11" pref="6" max="32767" attributes="0"/>
+                                  <EmptySpace min="11" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jLabel75" max="32767" attributes="0"/>
                                       <Component id="jButton2" max="32767" attributes="0"/>
